# snaketray

./: AUTHORS  CHANGELOG  ChangeLog  Doxyfile  README  TODO  config.h  configure.in.in  snaketray.kdevelop  snaketray.kdevses  snaketray_1.0-1_all.deb
admin/: cvs.sh
deb/debian/: changelog  control  copyright  rules
deb/debian/DEBIAN/: control
deb/debian/usr/share/applications/: snaketray.desktop
deb/debian/usr/share/man/: snaketray.pod
src/: Makefile  Makefile.am  Makefile.in  login_dialog.ui  main.cpp  settings.ui  snakelogindialog.cpp  snakelogindialog.h  snakeparser.cpp  snakeparser.h  snakesettings.cpp  snakesettings.h  snaketray.cpp  snaketray.desktop  snaketray.h  snaketray.lsm  snaketrayui.rc  snakeupdatechecker.cpp  snakeupdatechecker.h
src/.deps/: main.Po  snakeparser.Po  snakeparser.moc.Po  snaketray.Po
